--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "llamalist-mobile",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@clerk/clerk-expo": "^0.19.17",
-    "@tanstack/react-query": "^4.29.19",
-    "expo": "~49.0.15",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-dotenv": "^3.4.9"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "llamalist-mobile",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "expo start --tunnel",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@clerk/clerk-expo": "^0.19.17",
+        "@tanstack/react-query": "^4.29.19",
+        "expo": "~49.0.15",
+        "expo-splash-screen": "~0.20.5",
+        "expo-status-bar": "~1.6.0",
+        "react": "18.2.0",
+        "react-native": "0.72.6",
+        "react-native-dotenv": "^3.4.9"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0"
+    },
+    "private": true
 }
